<resources>
    <string name="app_name">Socialize</string>
    <string name="action_sign_in_short">Signup</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="btn_link_to_login"><u>Login</u></string>
    <string name="title_activity_signup">Signup</string>
    <string name="action_logout">Logout</string>
    <string name="welcome">Welcome to Socialize!</string>
    <string name="internet_failure">Make sure you\'re connected to the internet!</string>
    <string name="username">Username</string>
    <string name="invitation_title">Send an invitation</string>
    <string name="timeline_activity_label">Timeline</string>
    <string name="action_chat">Chat</string>
    <string name="chat_activity_label">Chat</string>
    <string name="groupUID">groupUID</string>
    <string name="message_send_fail">Message couldn\'t be delivered!</string>
    <string name="sender_email">sender_email</string>
    <string name="action_gallery">Gallery</string>
    <string name="userUID">userUID</string>
    <string name="avatar">avatar</string>
    <string name="nickname">nickname</string>
    <string name="default_error_message">An error occurred!</string>
    <string name="waiting_extra">waiting</string>
    <string name="facebook_btn">Facebook</string>
    <string name="gmail_button">Google+</string>
    <string name="sign_up_button"><u>New User</u></string>
    <string name="reset_password"><u>Forgot Password</u></string>
    <string name="hint_repeat_password">Confirm Password</string>
    <string name="message_FCM">message</string>
    <string name="type_FCM">type</string>
    <string name="hint_phone">Phone Number</string>
    <string name="facebook_app_id">1701611400135772</string>
    <string name="fb_login_protocol_scheme">fb1701611400135772</string>
    <string name="action_invite">Send Invitation</string>
    <string name="empty_timeline_message">No posts yet!</string>
    <string name="server_client_id">215041203956-vibm0nofa08ikfmhdbi8250fubaoriii.apps.googleusercontent.com</string>
    <string name="full_screen_image">urlPhotoClick</string>
    <string name="error_permission">Error taking read permission!</string>
    <string name="message_text">message_text</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="post_button">Post</string>
    <string name="post_link">Link</string>
    <string name="post_image">Image</string>
    <string name="reset_pass_title">Reset Password</string>
    <string name="reset_pass_content">Please, Enter your Email</string>
    <string name="reset_pass_success">Check your Email!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_error">Error!</string>
    <string name="loading_title">Loading</string>
    <string name="loading_content">Please Wait..</string>
    <string name="save_changes_button">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_profile">Edit Profile</string>
    <string name="input_email_error">Please Enter your Email!</string>
    <string name="input_pass_error">Please Enter your Password!</string>
    <string name="input_empty_error">Required!</string>
    <string name="input_short_pass_error">Must be bigger than 6 characters</string>
    <string name="input_pass_match_error">Passwords doesn\'t match!</string>
    <string name="post_success_toast">Post added successfully!</string>
    <string name="post_fail_toast">Failed to add the Post!</string>
    <string name="input_title_error">Please Enter your Address</string>
    <string name="input_description_error">Please Enter the description</string>
    <string name="logout_title">Logout</string>
    <string name="logout_content">Are you sure you want to logout?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="fullscreen_mode_toast">FullScreen Mode</string>
    <string name="invalid_intent">No application found to handle this request!</string>
    <string name="title_activity_signin">Signin</string>
    <string name="title_extra">title</string>
    <string name="imageUri_extra">imageUri</string>
    <string name="desc_extra">description</string>
    <string name="share_using">Share Using..</string>
    <string name="logged_out_message">Please Login!</string>
    <string name="post_list_extra">post_list_extra</string>
    <string name="user_list_extra">user_list_extra</string>
    <string name="bundle">bundle</string>
    <string name="image_transition_name">imageName</string>
    <string name="sender_nickname">sender_nickname</string>
    <string name="post_activity_label">Add Post</string>
</resources>
