<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:appContext=".activity.SigninActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:id="@+id/main_view"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@null"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_logo"
            />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:drawablePadding="@dimen/inner_space"
                android:drawableStart="@drawable/ic_mail"
                android:layout_marginBottom="@dimen/inner_space"
                />
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawablePadding="@dimen/inner_space"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock"
                android:layout_marginBottom="@dimen/inner_space"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textColor="@android:color/white"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inner_small"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/google_button"
                    android:layout_marginEnd="@dimen/inner_small"
                    android:drawableEnd="@drawable/ic_gmail"
                    android:padding="@dimen/inner_space"
                    android:background="#d34836"
                    android:text="@string/gmail_button"
                    android:textColor="@android:color/white"
                    />
                <Button
                    android:id="@+id/facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_facebook"
                    android:padding="@dimen/inner_space"
                    android:background="@color/com_facebook_blue"
                    android:text="@string/facebook_btn"
                    android:textColor="@android:color/white"
                    />
                <com.facebook.login.widget.LoginButton
                    android:layout_width="@dimen/zero_dimen"
                    android:layout_height="@dimen/zero_dimen"
                    android:id="@+id/facebook_builtin_btn"
                    />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inner_space"
                android:padding="@dimen/inner_small"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/sign_up_button"
                    android:text="@string/sign_up_button"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/reset_password"
                    android:layout_gravity="end"
                    android:text="@string/reset_password"
                    />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
