<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/grey"
                                                 tools:appContext=".activity.SignupActivity">

    <include
        layout="@layout/basic_toolbar"
        />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/outer_space"
            android:gravity="center"
            android:orientation="vertical"
            >
            <include
                layout="@layout/camera_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/camera_card_height"
                android:layout_marginBottom="@dimen/inner_space"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/default_elevation"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/inner_space"
                    android:orientation="vertical"
                    >
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:layout_marginBottom="@dimen/inner_space"
                        android:drawablePadding="@dimen/inner_space"
                        android:drawableStart="@drawable/ic_person"
                        />
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:layout_marginBottom="@dimen/inner_space"
                        android:drawablePadding="@dimen/inner_space"
                        android:drawableStart="@drawable/ic_mail"
                        />
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/inner_space"
                        android:drawablePadding="@dimen/inner_space"
                        android:hint="@string/hint_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_lock"
                        />
                    <EditText
                        android:id="@+id/repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/inner_space"
                        android:hint="@string/hint_repeat_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_lock"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/outer_space"
                />
            <TextView
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_link_to_login"
                android:layout_gravity="center"
                android:padding="@dimen/inner_space"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>