<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_view"
    tools:appContext=".activity.PostActivity"
    >
    <include
        layout="@layout/basic_toolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/outer_space"
            >
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/outer_space"
                app:cardElevation="@dimen/default_elevation"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/inner_space"
                    >
                    <include
                        layout="@layout/user_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/outer_space"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_text"
                        android:lines="1"
                        android:hint="@string/post_title"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/description_text"
                        android:paddingBottom="@dimen/inner_space"
                        android:gravity="top"
                        android:hint="@string/post_description"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/inner_space"
                        android:id="@+id/upload_check"
                        android:src="@drawable/app_icon"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:contentDescription="@string/uploaded_image"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/choose_photo"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_photo"
                        android:drawablePadding="@dimen/inner_space"
                        android:paddingBottom="@dimen/inner_space"
                        android:hint="@string/post_image"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/link_text"
                        android:drawableEnd="@drawable/ic_link"
                        android:drawablePadding="@dimen/inner_space"
                        android:paddingBottom="@dimen/inner_space"
                        android:hint="@string/post_link"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_btn"
                android:layout_marginBottom="@dimen/inner_space"
                android:text="@string/post_button"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
