<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:background="@color/grey"
                                                 tools:appContext=".activity.ProfileActivity">

    <include
        layout="@layout/basic_toolbar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_view"
        android:animateLayoutChanges="true"
        android:padding="@dimen/outer_space"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <include
                layout="@layout/camera_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/camera_card_height"
                android:layout_marginBottom="@dimen/inner_space"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/default_elevation"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/inner_space"
                    android:orientation="vertical"
                    >
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:animateLayoutChanges="true"
                        android:layout_marginBottom="@dimen/inner_space"
                        android:drawablePadding="@dimen/inner_space"
                        android:drawableStart="@drawable/ic_contact"
                        android:drawableTint="@color/colorAccent"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:animateLayoutChanges="true"
                        android:drawablePadding="@dimen/inner_space"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableTint="@color/colorAccent"
                        android:textColor="@color/colorPrimaryDark"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_changes_button"
                android:text="@string/save_changes_button"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:animateLayoutChanges="true"
                android:layout_marginTop="@dimen/outer_space"
                android:layout_marginBottom="@dimen/outer_space"
                />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>